test/message/syntactic-tail-call-of-identifier.out
*%(basename)s:8: SyntaxError: Unexpected expression inside tail call
  return continue   x  ;
                    ^
SyntaxError: Unexpected expression inside tail call
